ping_service/k8_resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping
spec:
  selector:
    matchLabels:
      app: ping
  replicas: 1
  template:
    metadata:
      labels:
        app: ping
    spec:
      containers:
        - name: ping
          image: ping:v1
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
