ping_service/k8_resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ping
spec:
  type: ClusterIP
  selector:
    app: ping
  ports:
    - port: 8080
      targetPort: 8080
