ping_service/k8_resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /ping
        pathType: Prefix
        backend:
          service:
            name: ping
            port:
              number: 8080
